# Qwen2.5-Coder

./: .gitignore  llm.py  pyproject.toml
finetuning/sft/: aider_chunks.json  client.py  code_qa.json  evaluate.py  gen_single_repo.py  requirements_codeqa.txt  requirements_inference.txt  requirements_train.txt  serve_model.py  test_peft.py  test_tokenizer.py  train_peft.py
finetuning/sft/qa_data/: gpt-4o_5_file_noreason.json
finetuning/sft/scripts/: gen_chat_data.py  gen_qa_data.py
qwencoder-eval/instruct/: evaluate.sh
qwencoder-eval/instruct/eval-dev-quality/results/eval-dev-quality/: jobs.txt
qwencoder-eval/instruct/peft-eval-results/eval-dev-quality/: jobs.txt
qwencoder-eval/instruct/results/eval-dev-quality/: jobs.txt  vllm-server.txt
qwencoder-eval/results/eval-dev-quality/: jobs.txt  vllm-server.txt
results/: vllm-server.txt
