[tool.poetry]
name = "qwen2-5-coder"
version = "0.1.0"
description = ""
authors = ["JohnPeng47 <johnpeng47@gmail.com>"]
readme = "README.md"
packages = [{include = "qwen2"}]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.59.9"
pydantic = "^2.10.5"
torch = "^2.5.1"
transformers = "^4.48.1"
trl = "^0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
